# io-server

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Config.cmake.in  MANIFEST  README.md  README.org  TODO.md  io-server.supp  ioserver_init.F90
doc/: Communication.md  Grid-assembly.md  Internal-APIs.md  Memory-layout.md  Overview.md  Performance-Observations.md  Pitfalls.md  ShmemHeap.md  Streams.md  Usage.md  disk_bandwidth_results.txt  mpi_bandwidth_results.txt  set_fallback_fonts.sh  test_page.md
include/: ioserver.inc
pseudo-model/: CMakeLists.txt  process_command.F90
pseudo-rmn/: CMakeLists.txt  jar_mod.F90  serializer.hf
scripts/: common_header.txt  extract_c_interfaces.sh  extract_fortran_interfaces.sh  parallel_list  parallel_run  shape_f_pointer.sh
src/: CMakeLists.txt  Makefile  atomic.F90  c_binding_extras_mod.F90  cb_common_mod.F90  circular_buffer.F90  circular_buffer.c  circular_buffer.h  circular_buffer.h.original  circular_buffer.inc  circular_buffer_interface.h  circular_buffer_mod.F90  common.c  common.h  common.inc  common_mod.F90  distributed_circular_buffer.F90  distributed_circular_buffer.c  distributed_circular_buffer.inc  distributed_circular_buffer_mod.F90  f_alloc.inc  generate_h.cmake  generate_inc.cmake  grid_assembly.F90  grid_assembly_mod.F90  grid_meta.F90  io_timer_mod.F90  ioserver_constants.F90  ioserver_constants_mod.F90  ioserver_context.F90  ioserver_context_final.hf  ioserver_context_getters.hf  ioserver_context_init.F90  ioserver_context_init.hf  ioserver_file_mod.F90  ioserver_functions.F90  ioserver_init.F90  ioserver_message.F90  ioserver_message_mod.F90  ioserver_mpi.F90  (+44 more)
src/io-server/: cb_data.h  cb_data.hf  circular_buffer.h  circular_buffer.inc  circular_buffer_defines.h  circular_buffer_defines.hf  common.h  common.inc  distributed_circular_buffer.h  distributed_circular_buffer.inc  f_alloc.inc  ioserver.inc  iso_c_binding_extras.hf  memory_arena.h  memory_arena.inc  process_command.inc  rpn_extra.h  rpn_extra.inc  serialize.hf  shmem_arena.h  shmem_arena.inc  shmem_heap.h  shmem_heap.inc  timer.h  timer.inc
test/: CMakeLists.txt  cb_plus_dcb.F90  circular_buffer.F90  circular_buffer_fill.c  circular_buffer_single_thread.F90  distributed_circular_buffer.F90  f_memory_arena.F90  gen_test_target.cmake  memory_arena.F90  pseudo-model.F90  pseudo-server.F90  remote_circular_buffer.F90  shmen_heap.F90  small_dcb_test.c  test_shmem_heap.F90
tests/: CMakeLists.txt  atomic.F90  benchmark_disk_bandwidth.F90  benchmark_mpi_bandwidth.F90  cb_plus_dcb.F90  cb_unaligned_input.c  circular_buffer.F90  circular_buffer_concurrent.F90  circular_buffer_fill.c  circular_buffer_single_thread.F90  circular_buffer_timeout.F90  custom_functions.F90  dcb_edge_case_1.F90  dcb_timeout.F90  dcb_unaligned_input.c  default_model.F90  distributed_circular_buffer.F90  empty_model.F90  example_memory_arena.F90  grid_meta.F90  init_comms.F90  launch_pseudo_model.F90  launch_server.F90  many_streams.F90  model_integration.F90  model_write.F90  mpi_accumulate_test.c  mpi_bandwidth.F90  pseudo-model.F90  pseudo-server.F90  put_error.F90  serializer_large.F90  server_stream_open.F90  shmem_heap_basic.F90  shmem_heap_by_offset.F90  simple_mutex.F90  small_dcb_test.c  stream_file_open.F90  test_common.inc  test_helper.c  (+6 more)
tests/script/: multi_node_tests.sh  single_node_tests.sh  test_model_write_on_repeat.sh
